# WebRTC-Tuto

./: AGENTS.md  CMakeLists.txt  Dockerfile  setup_dependencies.sh
docs/: comment-explainer-1pager.md  qt_timer_fix.md  thread-context-1pager.md  ui-main-thread-1pager.md  webrtc_receiver_threading.md
src/: webrtc_receiver.cpp
web/: sender.html
